--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -1,7 +1,12 @@
+# [[main]]
+# url = "/workers"
+# name = "作品"
+# weight = 3
+
 [[main]]
 url = "/posts"
-name = "作品"
-weight = 3
+name = "文章"
+weight = 4
 [[main]]
 url = "https://github.com/greenhat616"
 name = "Github"
@@ -13,4 +18,4 @@ weight = 2
 [[main]]
 url = "/index.xml"
 name = "RSS"
-weight = 4
+weight = 5
