--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,6 +2,7 @@ subtitle = "亲眼所见，亦非真实"
 favicon = "https://cdn.a632079.me/favicon.ico"
 
 enableReadingTime = true
+enableVue = true
 enableGitalk = false
 # Twitter Card and Open Graph settings
 enableOpenGraph = true
