--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ lineNoStart = 1
 lineNos = false
 lineNumbersInTable = true
 noClasses = true
-style = "perldoc"
+style = "monokai"
 tabWidth = 4
 [markup.goldmark.renderer]
 unsafe = true
